crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_event_names_without_jsx_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Greeter_component_n7HuG2hhU0Q = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q"), "Greeter_component_n7HuG2hhU0Q");
//
export const Greeter = /*#__PURE__*/ componentQrl(q_Greeter_component_n7HuG2hhU0Q);

============================= test.tsx_Greeter_component_div_div_q_e_click_2_B9tqzgApK9E.tsx (ENTRY POINT) ==
export const Greeter_component_div_div_q_e_click_2_B9tqzgApK9E = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_q_e_click_2_B9tqzgApK9E",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_q_e_click_2",
  "hash": "B9tqzgApK9E",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_q_e_click_2_B9tqzgApK9E",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_n7HuG2hhU0Q",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    292,
    300
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.tsx (ENTRY POINT) ==
import { default as mongo } from "mongodb";
export const Greeter_component_n7HuG2hhU0Q = () => {
	// Double count watch
	useTask$(async () => {
		await mongo.users();
	});
	return (
		<div>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
		</div>
	)
};
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    113,
    317
  ]
}
*/
============================= test.tsx_Greeter_component_div_div_q_e_click_1_s7p0zjWZpqo.tsx (ENTRY POINT) ==
export const Greeter_component_div_div_q_e_click_1_s7p0zjWZpqo = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_q_e_click_1_s7p0zjWZpqo",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_q_e_click_1",
  "hash": "s7p0zjWZpqo",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_q_e_click_1_s7p0zjWZpqo",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_n7HuG2hhU0Q",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    262,
    270
  ]
}
*/
============================= test.tsx_Greeter_component_div_div_q_e_click_wYSPnQEGCbA.tsx (ENTRY POINT) ==
export const Greeter_component_div_div_q_e_click_wYSPnQEGCbA = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_q_e_click_wYSPnQEGCbA",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_q_e_click",
  "hash": "wYSPnQEGCbA",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_q_e_click_wYSPnQEGCbA",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_n7HuG2hhU0Q",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    232,
    240
  ]
}
*/
== DIAGNOSTICS ==
[]
