crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_handler_in_for_of_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(() => import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
  const arr = useSignal(['a', 'b']);
  const items = [];
  for (const val of arr.value) {
    items.push(
      <div onClick$={() => console.log(val)}>{val}</div>
    );
  }
  return <div>{items}</div>;
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    297
  ]
}
*/
== DIAGNOSTICS ==
[]
