crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_handlers_capturing_cross_scope_in_nested_loops.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
export default qrl(() => import("./test.tsx_test_5GvkoOCMrJc"), "test_5GvkoOCMrJc");

============================= test.tsx_test_5GvkoOCMrJc.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const test_5GvkoOCMrJc = () => {
  const matrix = useSignal([['a', 'b'], ['c', 'd']]);
  return (
    <div>
      {matrix.value.map((row, i) => {
        const rowIndex = i + 1;
        return (
          <div key={i}>
            {row.map((cell, j) => {
              const cellIndex = j + 1;
              const cellKey = rowIndex + '-' + cellIndex;
              return (
                <span key={j}>
                  <button onClick$={() => console.log(rowIndex, cellIndex)}>{cell}</button>
                  <span onKeyDown$={() => console.log(cellKey, i, j)}>{cellKey}</span>
                </span>
              );
            })}
          </div>
        );
      })}
    </div>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_5GvkoOCMrJc",
  "entry": null,
  "displayName": "test.tsx_test",
  "hash": "5GvkoOCMrJc",
  "canonicalFilename": "test.tsx_test_5GvkoOCMrJc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    757
  ]
}
*/
== DIAGNOSTICS ==
[]
