crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_multiple_block_scoped_variables_and_item_index_in_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { onClickQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
  const arr = useSignal(['a', 'b'])
  return (
    <div>
      {arr.value.map((val, i) => {
        const index = i+1;
		const value = val.toUpperCase();
        return <div onClick$={() => console.log(value, index, val, i)}>{val}</div>
      })}
    </div>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    357
  ]
}
*/
============================= test.tsx_test_component_div_q_e_click_omwK2O280Tk.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const test_component_div_q_e_click_omwK2O280Tk = () => {
	const i = _captures[0];
	const index = _captures[1];
	const val = _captures[2];
	const value = _captures[3];
	return console.log(value, index, val, i);
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_div_q_e_click_omwK2O280Tk",
  "entry": null,
  "displayName": "test.tsx_test_component_div_q_e_click",
  "hash": "omwK2O280Tk",
  "canonicalFilename": "test.tsx_test_component_div_q_e_click_omwK2O280Tk",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "i",
    "index",
    "val",
    "value"
  ],
  "loc": [
    276,
    315
  ]
}
*/
== DIAGNOSTICS ==
[]
